// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > core > hocs > withCurrentProduct should inject a single property with the context into the component 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"product":{"id":"123","name":"acme","price":{"currency":"EUR","unitPrice":22.95,"unitPriceStriked":25.95}},"someProp":true}
</pre>
`;

exports[`engage > core > hocs > withCurrentProduct should inject the context properties into the component 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"id":"123","name":"acme","price":{"currency":"EUR","unitPrice":22.95,"unitPriceStriked":25.95},"someProp":true}
</pre>
`;
